--- a/config/database.yml
+++ b/config/database.yml
@@ -1,42 +1,35 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+
 development:
   adapter: mysql2
   encoding: utf8
-  database: db/production.sqlite3
+  database: railsdb
   pool: 5
   timeout: 5000
-  username: root
-  password: "1234"
+  username: railsuser
+  password: railspass
   host: localhost
 
 
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  database: database_mysql_test
-  pool: 5
-  timeout: 5000
-  username: root
-  password: "1234"
-  host: localhost
+   adapter: mysql2
+   encoding: utf8
+   database: railsdb
+   pool: 5
+   timeout: 5000
+   username: railsuser
+   password: railspass
+   host: localhost
 
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: database_mysql_production
-  pool: 5
-  timeout: 5000
-  username: root
-  password: "1234"
-  host: localhost
+   adapter: mysql2
+   encoding: utf8
+   database: railsdb
+   pool: 5
+   timeout: 5000
+   username: railsuser
+   password: railspass
+   host: localhost
 
 
