--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 development:
   adapter: mysql2
   encoding: utf8
-  database: project
+  database: Famillyblog
   pool: 5
   timeout: 5000
   password: "1234"
@@ -13,7 +13,7 @@ development:
 test:
    adapter: mysql2
    encoding: utf8
-   database: project
+   database: Famillyblog
    pool: 5
    timeout: 5000
    password: "1234"
@@ -23,7 +23,7 @@ test:
 production:
    adapter: mysql2
    encoding: utf8
-   database: project
+   database: Famillyblog
    pool: 5
    timeout: 5000
    password: "1234"
